--- a/modules/ImageProjector/CMakeLists.txt
+++ b/modules/ImageProjector/CMakeLists.txt
@@ -1,5 +1,5 @@
 ################################################################################
-# Project Name: module1
+# Project Name: ImageProjector
 #
 # Components:
 #    - ExampleComponent: Wrapper class of ExampleLibrary
@@ -8,37 +8,38 @@
 
 # Project information
 cmake_minimum_required(VERSION 3.10)
-set(PACKAGE_NAME module1)
+set(PACKAGE_NAME ImageProjector)
 project(${PACKAGE_NAME} LANGUAGES CXX)
 
 # Export aliases
-set(MODULE1_PATH ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "MODULE1_PATH")
-set(MODULE1_INCLUDE_PATH
-        "${MODULE1_PATH}/include" CACHE PATH "MODULE1_INCLUDE_PATH")
-set(MODULE1_RESOURCES_PATH
-        "${MODULE1_PATH}/resources" CACHE PATH "MODULE1_RESOURCES_PATH")
-set(MODULE1_TEST_PATH
-        "${MODULE1_PATH}/test" CACHE PATH "MODULE1_TEST_PATH")
+set(IMAGEPROJECTOR_PATH ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "IMAGEPROJECTOR_PATH")
+set(IMAGEPROJECTOR_INCLUDE_PATH
+        "${IMAGEPROJECTOR_PATH}/include" CACHE PATH "IMAGEPROJECTOR_INCLUDE_PATH")
+set(IMAGEPROJECTOR_RESOURCES_PATH
+        "${IMAGEPROJECTOR_PATH}/resources" CACHE PATH "IMAGEPROJECTOR_RESOURCES_PATH")
+set(IMAGEPROJECTOR_TEST_PATH
+        "${IMAGEPROJECTOR_PATH}/test" CACHE PATH "IMAGEPROJECTOR_TEST_PATH")
 
 # Paths
-add_definitions(-DMODULE1_SOURCE_DIR="${MODULE1_PATH}")
-add_definitions(-DMODULE1_RESOURCES_DIR="${MODULE1_RESOURCES_PATH}")
+add_definitions(-DIMAGEPROJECTOR_SOURCE_DIR="${IMAGEPROJECTOR_PATH}")
+add_definitions(-DIMAGEPROJECTOR_RESOURCES_DIR="${IMAGEPROJECTOR_RESOURCES_PATH}")
 
 # Source files
-set(MODULE1_SOURCE_FILES
-        src/Class.cpp
+set(IMAGEPROJECTOR_SOURCE_FILES
+        src/ImageProjector.cpp
         )
 add_library(${PACKAGE_NAME}
-        ${MODULE1_SOURCE_FILES}
+        ${IMAGEPROJECTOR_SOURCE_FILES}
         )
 
 # Header files, including 3rdParty
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_MODULE_PATH})
 
-target_include_directories(${PACKAGE_NAME} PRIVATE
-        ${MODULE1_INCLUDE_PATH}
+target_include_directories(${PACKAGE_NAME} PUBLIC
+        ${IMAGEPROJECTOR_INCLUDE_PATH}
         )
-target_link_libraries(${PACKAGE_NAME} PRIVATE
+        
+target_link_libraries(${PACKAGE_NAME} PUBLIC
         ${EASY_PROFILER_LIBS}
         ${SPDLOG_LIBS}
         stdc++fs
