--- a/.github/workflows/clang-tools.yml
+++ b/.github/workflows/clang-tools.yml
@@ -2,9 +2,9 @@ name: clang-format
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -17,6 +17,8 @@ jobs:
 
       - name: Run clang-format check script
         run: |
+          echo "=== give permission to py file ==="
+          chmod +x ./run-clang-format.py
           echo "=== clang-format check start ==="
           ./run-clang-format.py --style file -r modules
           echo "=== clang-format check finished ==="
